cluster/apps/security/oauth2-proxy/ingressRoute-k8s-dashboard.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-forward
  namespace: networking
spec:
  routes:
    - match: "Host(`dashboard.${SECRET_DOMAIN}`)" # && PathPrefix(`/`)"
      kind: Rule
      middlewares:
        - name: oauth-auth-redirect
      services:
        - name: kubernetes-dashboard
          namespace: monitoring
          port: 443
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-oauth-kubernetes-dashboard
  namespace: networking
spec:
  routes:
    - match: "Host(`dashboard.${SECRET_DOMAIN}`) && PathPrefix(`/oauth2`)"
      kind: Rule
      middlewares:
        - name: oauth2-proxy-headers
      services:
        - name: oauth2-proxy
          namespace: security
          port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oauth-auth-redirect
  namespace: networking
spec:
  forwardAuth:
    address: https://oauth2.${SECRET_DOMAIN}
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Access-Token
      - Authorization
      # - Set-Cookie
