cluster/apps/security/oauth2-proxy/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-oauth2-proxy
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`oauth2.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        # - name: headers-default
        - name: auth-proxy-headers
      services:
        - name: oauth2-proxy
          namespace: security
          port: 80

  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-proxy-headers
  namespace: networking
spec:
  headers:
    sslRedirect: false
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    frameDeny: true
